--- a/HackerBooks/Base.lproj/Main.storyboard
+++ b/HackerBooks/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
         <!--Hacker Books Table View Controller-->
         <scene sceneID="8r5-7O-K6X">
             <objects>
-                <tableViewController clearsSelectionOnViewWillAppear="NO" id="tNz-c8-MSU" customClass="HackerBooksTableViewController" customModule="HackerBooks" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="HackerBooksTableViewController" clearsSelectionOnViewWillAppear="NO" id="tNz-c8-MSU" customClass="HackerBooksTableViewController" customModule="HackerBooks" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="8rZ-pG-vBn">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -93,14 +93,6 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qZR-Mi-drg" id="cbB-Qc-79J">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Título" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dLK-Fa-dnl">
-                                            <rect key="frame" x="8" y="0.0" width="59" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -121,7 +113,7 @@
                         </segmentedControl>
                     </navigationItem>
                     <connections>
-                        <outlet property="sortType" destination="Jha-h7-Wkm" id="hT3-4R-cmO"/>
+                        <outlet property="sortType" destination="Jha-h7-Wkm" id="cB2-gT-bqF"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RUH-Ha-Mpb" userLabel="First Responder" sceneMemberID="firstResponder"/>
